--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ pkg
 spec/dummy/db/*.sqlite3
 spec/dummy/db/*.sqlite3-journal
 spec/dummy/log/*.log
+spec/dummy/log/*.txt
+spec/dummy/public/system/
 spec/dummy/tmp/
 spec/dummy/.sass-cache
 tmp
